resources/workshop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: workshop
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deployment: workshop
    spec:
      serviceAccountName: eduk8s
      containers:
      - name: dashboard
        image: quay.io/eduk8s/workshop-dashboard:develop
        imagePullPolicy: Always
        ports:
        - containerPort: 10080
          protocol: TCP
